--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -11,40 +11,41 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "pypy-3.9"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
         os: [ubuntu-latest, macos-latest, windows-latest]
-        exclude:
-        - os: windows-latest
-          python-version: "pypy-3.9"
-        - os: macos-latest
-          python-version: "pypy-3.9"
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip twine
-        pip install poetry
-        poetry install
-    - name: Run test suite
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run tests
       run: |
-        poetry run py.test -v --cov=tinydb
+        pytest -v --cov=tinydb
+
     - name: Perform type check
       run: |
-        poetry run pip install pytest-mypy
-        poetry run pytest --mypy -m mypy tinydb tests
+        pip install pytest-mypy
+        pytest --mypy -m mypy tinydb tests
+
     - name: Verify dist package format
+      if: ${{ matrix.python-version == '3.10' }}
       run: |
         poetry build
         twine check dist/*
-      if: ${{ contains(matrix.python-version, '3.10') }}
+
     - name: Upload coverage result
-      if: ${{ env.COVERALLS_REPO_TOKEN != 'windows-latest' }}
+      if: ${{ matrix.os != 'windows-latest' }}
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: |
-         poetry run coveralls
+         coveralls
