--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["anaconda3"]
+        python-version: ["3.12"]
         os: [macos-latest, windows-latest]
     timeout-minutes: 60
 
