--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.12"]
-        os: [macos-latest, windows-latest]
+        os: [macos, windows]
     timeout-minutes: 60
 
     steps:
